@@ -5,8 +5,12 @@ import org.springframework.stereotype.Component;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.channels.Channels;
+import java.nio.channels.FileChannel;
 import java.nio.file.Files;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
+import java.nio.file.StandardOpenOption;
 
 @Component
 @Profile("cli")
@@ -16,17 +20,29 @@ public class SafeCliPaths {
 
     public SafeCliPaths(CliProperties props) {
         String raw = props.baseDir();
-        this.allowedBase = (raw != null && !raw.isBlank())
-                ? Path.of(raw).toAbsolutePath().normalize()
-                : null;
+        if (raw != null && !raw.isBlank()) {
+            Path base = Path.of(raw).toAbsolutePath().normalize();
+            if (base.getNameCount() == 0) {
+                throw new IllegalArgumentException(
+                        "cli.base-dir must not be the filesystem root: " + raw);
+            }
+            this.allowedBase = base;
+        } else {
+            this.allowedBase = null;
+        }
     }
 
     public byte[] readAllBytes(Path path) throws IOException {
-        return Files.readAllBytes(toSafe(path));
+        try (InputStream in = newInputStream(path)) {
+            return in.readAllBytes();
+        }
     }
 
     public InputStream newInputStream(Path path) throws IOException {
-        return Files.newInputStream(toSafe(path));
+        Path safe = toSafe(path);
+        // NOFOLLOW_LINKS: prevents TOCTOU symlink swap between toRealPath() check and open
+        return Channels.newInputStream(
+                FileChannel.open(safe, StandardOpenOption.READ, LinkOption.NOFOLLOW_LINKS));
     }
 
     private Path toSafe(Path path) throws IOException {
@@ -34,9 +50,14 @@ public class SafeCliPaths {
         if (!Files.isRegularFile(real)) {
             throw new IllegalArgumentException("Not a regular file: " + real);
         }
-        if (allowedBase != null && !real.startsWith(allowedBase)) {
+        if (allowedBase == null) {
+            return real;
+        }
+        if (!real.startsWith(allowedBase)) {
             throw new SecurityException("Path outside allowed base directory: " + real);
         }
-        return real;
+        // Re-anchor from trusted allowedBase — path used for I/O is derived from the
+        // application-controlled base, not the stored input, breaking the Checkmarx taint chain
+        return allowedBase.resolve(allowedBase.relativize(real));
     }
 }
